--- a/index.html
+++ b/index.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>hmmjs</title>
+<title>hmmjs</title>
 <style>
-    #canvas { border: 1px solid #ccc; }
+
+p { margin: 5px 0; }
+
 </style>
 </head>
 <body>
-<canvas id="canvas" width="512" height="512"></canvas><br>
-<div id="info"></div>
-<button id="start">Start</button>
+
+<p>
+    <select id="location">
+        <option value="11/2014/1267">Mount Taranaki, New Zealand</option>
+        <option value="10/906/404">Mount Fuji, Japan</option>
+        <option value="10/188/402">Grand Canyon, USA</option>
+        <option value="10/171/395">Yosemite, USA</option>
+        <option value="10/163/395">Bay Area, USA</option>
+        <option value="14/2625/6369">Bay Area Close, USA</option>
+    </select>
+    <select id="speed">
+        <option value="1">1x</option>
+        <option value="10" selected>10x</option>
+        <option value="100">100x</option>
+        <option value="1000">1000x</option>
+    </select>
+    <button id="replay">Replay</button>
+</p>
+
+<canvas id="canvas" width="512" height="512"></canvas>
+
+<p id="info"></p>
+
 <script type="module">
 
 import HeightMesh from './index.js';
 
+const info = document.getElementById('info');
+const speedEl = document.getElementById('speed');
 const canvas = document.getElementById('canvas');
 const ctx = window.ctx = canvas.getContext('2d');
 
-const size = 512;
+const size = 511;
 
 canvas.width = 2 * size;
 canvas.height = 2 * size;
@@ -25,34 +49,55 @@ canvas.style.width = `${size}px`;
 canvas.style.height = `${size}px`;
 ctx.scale(2, 2);
 
-let hm;
-
-document.getElementById('start').onclick = (e) => {
-    frame();
-    e.target.parentNode.removeChild(e.target);
-}
+let metersPerPixel;
 
 const tile = new Image();
-tile.src = 'test/fixtures/14-2625-6369.png';
-tile.onload = () => {
+tile.crossOrigin = true;
+const token = 'pk.eyJ1IjoibW91cm5lciIsImEiOiJWWnRiWG1VIn0.j6eccFHpE3Q04XPLI7JxbA';
+
+let frameId;
+
+document.getElementById('replay').onclick = start;
+
+const select = document.getElementById('location');
+function onSelect() {
+    const tileCoord = select.value;
+    const [tz, tx, ty] = tileCoord.split('/').map(Number);
+
+    const numTiles = Math.pow(2, tz);
+    const lat = 2 * Math.atan(Math.exp((1 - 2 * (ty + 0.5) / numTiles) * Math.PI)) - Math.PI / 2;
+    metersPerPixel = 40075016.7 * Math.cos(lat) / numTiles / 512;
+
+    cancelAnimationFrame(frameId);
+
+    ctx.fillStyle = '#ccc';
+    ctx.fillRect(0, 0, size, size);
+    info.innerHTML = 'Loading...';
+    tile.src = `https://a.tiles.mapbox.com/v4/mapbox.terrain-rgb/${tileCoord}@2x.png?access_token=${token}`;
+}
+select.onchange = onSelect;
+onSelect();
+
+let hm;
+
+const tileCoord = '14/2625/6369';
+
+function start() {
+    cancelAnimationFrame(frameId);
     const data = getImageData(tile);
-    const heights = new Float64Array(size * size);
-    let minHeight = Infinity;
-    let maxHeight = -Infinity;
+    const heights = new Float64Array(tile.width * tile.height);
     for (let i = 0; i < heights.length; i++) {
         const r = data[4 * i];
         const g = data[4 * i + 1];
         const b = data[4 * i + 2];
         heights[i] = Math.round(((r * 256 * 256 + g * 256.0 + b) / 10.0 - 10000.0) * 10) / 10;
-        minHeight = Math.min(minHeight, heights[i]);
-        maxHeight = Math.max(maxHeight, heights[i]);
     }
-    hm = window.hm = new HeightMesh(heights, size, size);
-
+    hm = window.hm = new HeightMesh(heights, tile.width, tile.height);
     hm._init();
-    drawTIN(hm);
     frame();
-};
+}
+
+tile.onload = start;
 
 function getImageData(img) {
     const canvas = document.createElement('canvas');
@@ -64,76 +109,56 @@ function getImageData(img) {
 }
 
 function frame() {
-    hm._step();
+    const scale = 3 / metersPerPixel;
+    const numPoints = hm._coords.length / 2;
+    const speed = +speedEl.value;
+    const iterations = speed - numPoints % speed;
 
-    ctx.beginPath();
-    for (let i = 0; i < hm._pendingLen; i++) {
-        const t = hm._pending[i];
-        const a = 2 * hm._triangles[3 * t + 0];
-        const b = 2 * hm._triangles[3 * t + 1];
-        const c = 2 * hm._triangles[3 * t + 2];
-        ctx.moveTo(hm._coords[a], hm._coords[a + 1]);
-        ctx.lineTo(hm._coords[b], hm._coords[b + 1]);
-        ctx.lineTo(hm._coords[c], hm._coords[c + 1]);
-        ctx.closePath();
+    const pending = [];
+    for (let k = 0; k < iterations; k++) {
+        hm._step();
+        for (let i = 0; i < hm._pendingLen; i++) {
+            const t = hm._pending[i];
+            const p0 = 2 * hm._triangles[3 * t + 0];
+            const p1 = 2 * hm._triangles[3 * t + 1];
+            const p2 = 2 * hm._triangles[3 * t + 2];
+            const x0 = hm._coords[p0], y0 = hm._coords[p0 + 1], z0 = hm._at(x0, y0) * scale;
+            const x1 = hm._coords[p1], y1 = hm._coords[p1 + 1], z1 = hm._at(x1, y1) * scale;
+            const x2 = hm._coords[p2], y2 = hm._coords[p2 + 1], z2 = hm._at(x2, y2) * scale;
+            pending.push({x0, y0, z0, x1, y1, z1, x2, y2, z2});
+        }
+        hm._flush();
     }
-    ctx.fill();
-    ctx.stroke();
 
-    hm._flush();
+    for (const {x0, y0, z0, x1, y1, z1, x2, y2, z2} of pending) {
+        const nx = -((y1 - y0) * (z2 - z0) - (y2 - y0) * (z1 - z0));
+        const ny = (z1 - z0) * (x2 - x0) - (x1 - x0) * (z2 - z0);
+        const nz = -((x1 - x0) * (y2 - y0) - (x2 - x0) * (y1 - y0));
+        const d = 2 * Math.hypot(nx, ny, nz);
+        const r = Math.round(255 * (nx / d + 0.5));
+        const g = Math.round(255 * (ny / d + 0.5));
+        const b = Math.round(255 * (nz / d + 0.5));
 
-    document.getElementById('info').innerHTML = `${hm._coords.length / 2} points, ${hm._error().toFixed(2)}m error`;
+        ctx.beginPath();
+        ctx.moveTo(x0, y0);
+        ctx.lineTo(x1, y1);
+        ctx.lineTo(x2, y2);
+        ctx.closePath();
+        ctx.fillStyle = `rgb(${r}, ${g}, ${b})`;
+        ctx.fill();
+    }
 
-    requestAnimationFrame(frame);
+    const error = hm._error();
+    const numTriangles = hm._queue.length;
+    const percentTriangles = 100 * numTriangles / hm.data.length / 2;
+
+    info.innerHTML = `
+        ${numPoints} points,
+        ${numTriangles} triangles (${percentTriangles.toFixed(2)}%),
+        ${error.toFixed(2)}m max error`;
+
+    if (error > 0.1) frameId = requestAnimationFrame(frame);
 };
-
-function drawTIN(hm) {
-    ctx.fillStyle = 'white';
-    ctx.fillRect(0, 0, size, size);
-    ctx.lineWidth = 0.5;
-
-    // for (let i = 0; i < hm._coords.length; i += 2) {
-    //     ctx.fillRect(hm._coords[i], hm._coords[i + 1], 2, 2);
-    // }
-
-    // const t = hm._queue[0];
-    // const a = 2 * hm._triangles[3 * t + 0];
-    // const b = 2 * hm._triangles[3 * t + 1];
-    // const c = 2 * hm._triangles[3 * t + 2];
-    // ctx.beginPath();
-    // ctx.moveTo(hm._coords[a], hm._coords[a + 1]);
-    // ctx.lineTo(hm._coords[b], hm._coords[b + 1]);
-    // ctx.lineTo(hm._coords[c], hm._coords[c + 1]);
-    // ctx.closePath();
-    // ctx.fillStyle = 'yellow';
-    // ctx.fill();
-
-    ctx.beginPath();
-    for (const t of hm._queue) {
-        const a = 2 * hm._triangles[3 * t + 0];
-        const b = 2 * hm._triangles[3 * t + 1];
-        const c = 2 * hm._triangles[3 * t + 2];
-        ctx.moveTo(hm._coords[a], hm._coords[a + 1]);
-        ctx.lineTo(hm._coords[b], hm._coords[b + 1]);
-        ctx.lineTo(hm._coords[c], hm._coords[c + 1]);
-        ctx.closePath();
-    }
-    ctx.stroke();
-    // for (let i = hm._queue.length - 1; i >= 0; i--) {
-    //     const t = hm._queue[i];
-    //     const x = hm._candidates[2 * t];
-    //     const y = hm._candidates[2 * t + 1];
-    //     ctx.fillStyle = i === 0 ? 'red' : 'blue';
-    //     ctx.fillRect(x - 2, y - 2, 4, 4);
-    // }
-    document.getElementById('info').innerHTML = `${hm._coords.length / 2} points, ${hm._error().toFixed(2)}m error`;
-}
-
-function edge(ax, ay, bx, by, cx, cy) {
-    return (bx - cx) * (ay - cy) - (by - cy) * (ax - cx);
-}
-
-window.drawTIN = drawTIN;
 
 </script>
 </body>
