--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>hmmjs</title>
+<title>Delatin, a fast JavaScript terrain mesh tool</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body {
     margin: 0;
     font: 16px/1.2 "Helvetica Neue", Helvetica, Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    padding: 0 10px;
 }
-#container { max-width: 500px; }
+#container {
+    max-width: 640px;
+    margin: 0 auto;
+}
 /*body {
     font: 16px/1.3 -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -23,7 +26,6 @@ p {
     margin: 0 0 10px;
 }
 #info {
-    font-size: 14px;
     margin: 5px;
     color: #666;
 }
@@ -60,9 +62,11 @@ p {
     <button id="replay">Replay</button>
 </p>
 
-<canvas id="canvas" width="512" height="512"></canvas>
-
 <p id="info"></p>
+
+<canvas id="canvas"></canvas>
+
+<p>Terrain source: <a href="https://docs.mapbox.com/help/troubleshooting/access-elevation-data/#mapbox-terrain-rgb">Mapbox Terrain-RGB</a></p>
 
 <script type="module">
 
@@ -73,13 +77,13 @@ const speedEl = document.getElementById('speed');
 const canvas = document.getElementById('canvas');
 const ctx = window.ctx = canvas.getContext('2d');
 
-const size = 511;
-
+const size = 640;
+const ratio = 2 * size / 511;
 canvas.width = 2 * size;
 canvas.height = 2 * size;
 canvas.style.width = `${size}px`;
 canvas.style.height = `${size}px`;
-ctx.scale(2, 2);
+ctx.scale(ratio, ratio);
 
 let metersPerPixel;
 
