--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ let metersPerPixel;
 
 const tile = new Image();
 tile.crossOrigin = true;
-const token = 'pk.eyJ1IjoibW91cm5lciIsImEiOiJWWnRiWG1VIn0.j6eccFHpE3Q04XPLI7JxbA';
+const token = 'pk.eyJ1IjoibW91cm5lciIsImEiOiJjbG1qZjhnOGswM3QzMmtvYmc5dDJjNW94In0.0iQi-qVJJQ6bZCqPyrTp2w';
 
 let frameId;
 
