--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ let metersPerPixel;
 
 const tile = new Image();
 tile.crossOrigin = true;
-const token = 'pk.eyJ1IjoibW91cm5lciIsImEiOiJjbG1qZjhnOGswM3QzMmtvYmc5dDJjNW94In0.0iQi-qVJJQ6bZCqPyrTp2w';
+const token = 'pk.eyJ1IjoibW91cm5lciIsImEiOiJjbG83ZDF0ZGgwNTJ1MmtsajF1ZDN0c3ZvIn0.56k4reJ2cZAGNVklIGCXnQ';
 
 let frameId;
 
